@@ -16,14 +16,16 @@
  */
 package org.operaton.bpm.model.bpmn.instance.operaton;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+
 import org.operaton.bpm.model.bpmn.instance.BpmnModelElementInstanceTest;
 
-import static org.junit.jupiter.api.Assertions.fail;
 import static org.operaton.bpm.model.bpmn.impl.BpmnModelConstants.OPERATON_NS;
+import static org.assertj.core.api.Assertions.assertThatCode;
 
 /**
  * @author Sebastian Menski
@@ -42,15 +44,13 @@ class OperatonInputParameterTest extends BpmnModelElementInstanceTest {
 
   @Override
   public Collection<AttributeAssumption> getAttributesAssumptions() {
-    return Arrays.asList(
-      new AttributeAssumption(OPERATON_NS, "name", false, true)
-    );
+    return List.of(new AttributeAssumption(OPERATON_NS, "name", false, true));
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
-  void testIntputParameterScriptChildAssignment() {
-    try {
+  void testInputParameterScriptChildAssignment() {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
@@ -59,38 +59,35 @@ class OperatonInputParameterTest extends BpmnModelElementInstanceTest {
       scriptElement.setTextContent("${'a script'}");
 
       inputParamElement.addChildElement(scriptElement);
-    } catch (Exception e) {
-      fail("OperatonScript should be accepted as a child element of OperatonInputParameter. Error: " + e.getMessage());
-    }
+    }).as("OperatonScript should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
   void testInputParameterListChildAssignment() {
-    try {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
       OperatonList listElement = modelInstance.newInstance(OperatonList.class);
 
       inputParamElement.addChildElement(listElement);
-    } catch (Exception e) {
-      fail("OperatonList should be accepted as a child element of OperatonInputParameter. Error: " + e.getMessage());
-    }
+    }).as("OperatonList should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 
   @Disabled("Test ignored. CAM-9441: Bug fix needed")
   @Test
   void testInputParameterMapChildAssignment() {
-    try {
+    assertThatCode(() -> {
       OperatonInputParameter inputParamElement = modelInstance.newInstance(OperatonInputParameter.class);
       inputParamElement.setOperatonName("aVariable");
 
       OperatonMap listElement = modelInstance.newInstance(OperatonMap.class);
 
       inputParamElement.addChildElement(listElement);
-    } catch (Exception e) {
-      fail("OperatonMap should be accepted as a child element of OperatonInputParameter. Error: " + e.getMessage());
-    }
+    }).as("OperatonMap should be accepted as a child element of OperatonInputParameter. Error: ")
+      .doesNotThrowAnyException();
   }
 }
